k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: expo-stores
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: expo-stores
spec:
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: expo-stores
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeSelector:
        role: db
      tolerations:
      - key: db-only
        operator: Exists
        effect: NoSchedule
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 20Gi
